# 03_Assessing_the_tone_of_news_on_cryptocurrency

./: README.md  crypto_news_parser.py  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  main.py
backend/src/: __init__.py
backend/src/data/: __init__.py
backend/src/data/collectors/: __init__.py  crypto_news_parser.py
backend/src/data/processors/: __init__.py
backend/src/models/indicators/: __init__.py
backend/src/models/nlp/: __init__.py
backend/src/models/price/: __init__.py
backend/src/pipelines/: __init__.py
backend/src/utils/: __init__.py
config/: params.yml
frontend/: Dockerfile  main.py
