[tool.poetry]
name = "03_assessing_the_tone_of_news_on_cryptocurrency"
version = "0.1.0"
description = ""
authors = ["myxa95"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
matplotlib = "*"
numpy = "*"
plotly = "*"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
ipykernel = "^6.29.5"
notebook = "^7.3.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"